--- a/UIExercise/main.css
+++ b/UIExercise/main.css
@@ -105,9 +105,20 @@ html, body, .exercise_1 {
     float: left;
 }
 
-.nav_menu i {
-    color: #a9afbb;
-    margin-right: 10px;
+.nav_menu__background {
+    filter: grayscale(100%);
+    max-width: 100%;
+    max-height: 100%;
+    height: 100%;
+    opacity: 0.08;
+    transform: rotate(180deg);
+}
+
+.nav_menu__content {
+    position: absolute;
+    top: 0;
+    height: inherit;
+    width: inherit;
 }
 
 .nav_menu__name {
@@ -138,4 +149,9 @@ html, body, .exercise_1 {
 .nav_menu__item--bottom {
     position: absolute;
     bottom: 10px;
+}
+
+.nav_menu i {
+    color: #a9afbb;
+    margin-right: 10px;
 }
