--- a/UIExercise/main.css
+++ b/UIExercise/main.css
@@ -3,16 +3,20 @@ html, body, .exercise_1 {
     height: 100%;
 }
 
-.body {
+body {
     min-width: 320px;
 }
 
-.content {
+b {
+    font-weight: bold;
+}
+
+.main_content {
     margin-left: 180px;
 }
 
 @media only screen and (max-width: 500px) {
-    .content {
+    .main_content {
         margin-left: 50px;
     }
 }
@@ -184,4 +188,61 @@ html, body, .exercise_1 {
     .nav_menu__item_text {
         display: none;
     }
+}
+
+/*** User card ***/
+.user_card_container {
+    padding: 20px;
+}
+
+.user_card {
+    width: 300px;
+    text-align: center;
+    position: relative;
+}
+
+.user_card__main_content {
+    padding: 40px 20px 14px;
+}
+
+.user_card__heading {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px 20px;
+    background-color: rgba(211, 211, 211, 0.5);
+}
+
+.user_card__photo {
+    background-image: url(./assets/person.png);
+    width: 80px;
+    height: 80px;
+    border-radius: 100%;
+    background-size: cover;
+    margin: 0 auto 20px;
+}
+
+.user_card__line1 {
+    text-transform: uppercase;
+    margin-bottom: 6px;
+}
+
+.user_card__line2 {
+    font-size: 26px;
+    padding-bottom: 8px;
+}
+
+.user_card__actions {
+    margin: 0;
+    padding: 0;
+    font-size: 0;
+}
+
+.user_card__action {
+    font-size: 16px;
+    width: calc(50% - 2px);
+    display: inline-block;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border: lightgray 1px solid;
 }
